# derive-quickcheck

./: Cargo.toml  README.md  ci.sh  push.sh
.github/workflows/: rust.yml
qcderive-test/: Cargo.toml
qcderive-test/src/: enums.rs  lib.rs  structs.rs
src/: lib.rs
