[package]
name = "qcderive"
version = "0.1.0"
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
edition = "2021"
description = "Automatic `derive` for `quickcheck::Arbitrary`."
license = "LGPL-3.0-or-later"
repository = "https://github.com/wrsturgeon/qcderive"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = ">=1"
quote = ">=1"
syn = { version = ">=2", features = ["full"] }
