[package]
name = "derive-quickcheck"
version = "0.2.0"
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
edition = "2021"
description = "Automatic `derive` for `quickcheck::Arbitrary`."
license = "MPL-2.0"
repository = "https://github.com/wrsturgeon/derive-quickcheck"
readme = "README.md"
keywords = ["quickcheck", "testing", "derive", "arbitrary", "macro"]
categories = ["development-tools::testing"]
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
breadth-first-zip = ">=0.3.0"
heck = ">=0.4"
proc-macro2 = ">=1"
quote = ">=1"
syn = { version = ">=2", features = ["full"] }
